--- a/src/app.css
+++ b/src/app.css
@@ -1,25 +1,33 @@
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.preact:hover {
-  filter: drop-shadow(0 0 2em #673ab8aa);
-}
 
-.card {
-  padding: 2em;
-}
+:root{
+  /* Colors */
+  --color-primary: #6e2637;
+  --color-primary-light: #d5c0c5;
+  --color-secondary: #696868;
+  --color-black: #000;
 
-.read-the-docs {
-  color: #888;
+  /* Typography */
+  --text-primary: 'Poppins', sans-serif;
+  --text-small: 12px;
+  --text-medium: 14px;
+  --text-large: 16px;
+  --text-extra-large: 18px;
+  --text-extra-extra-large: 20px;
+  --line-height: 1.5;
+
+  /* Border */
+  --border-radius: 15px;
+}
+.app{
+  max-width: 531px;
+  margin: 10px auto;
+  width: 100%;
 }
