--- a/src/components/ItemAccordion/ItemAccordion.css
+++ b/src/components/ItemAccordion/ItemAccordion.css
@@ -1,5 +1,6 @@
 .item-accordion{
     font-family: var(--text-primary);
+    margin-bottom: 5px;
 }
 .acc-header{
     border: 1px solid var(--color-primary-light);
@@ -25,18 +26,22 @@
     background-color: var(--color-primary);
     position: absolute;
     top: 50%;
+    transition: all 0.2s;
 }
 .rotate-icon{
-    transform: rotate(90deg);
+    transform: rotate(-90deg);
     height: 1.5px;
 }
 
 .acc-body{
     width: 100%;
     border: 1px solid var(--color-primary-light);
-    border-radius: 5px;
+    border-radius: 20px;
     margin-top: 10px;
     padding: 20px;
+    max-height: 3000px;
+    height: auto;
+    transition: all 0.5s ease;
 }
 .recomm-products-wrapper{
     display: flex;
@@ -58,4 +63,13 @@
 .recomm-products-wrapper::-webkit-scrollbar-track{
     background: var(--color-primary-light);
     border-radius: 20px;
+}
+
+.hide{
+    max-height: 0px;
+    overflow: hidden;
+    padding-top: 0;
+    padding-bottom: 0;
+    border: 1px solid #fff;
+    margin-top: 0;
 }
