--- a/src/app.css
+++ b/src/app.css
@@ -31,3 +31,13 @@
   margin: 10px auto;
   width: 100%;
 }
+
+.grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+   grid-gap: 10px;
+}
+
+.flex {
+display: flex;
+}
