feat: build selected product card

--- a/src/app.css
+++ b/src/app.css
@@ -10,7 +10,7 @@
 :root{
   /* Colors */
   --color-primary: #6e2637;
-  --color-primary-light: #d5c0c5;
+  --color-primary-light: #e3e2e2;
   --color-secondary: #696868;
   --color-black: #000;
 
