feat:integrated api

--- a/src/app.css
+++ b/src/app.css
@@ -41,3 +41,10 @@
 .flex {
 display: flex;
 }
+
+.charmproduct-details{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+  padding-top: 2px;
+}
