--- a/src/components/ItemAccordion/ItemAccordion.css
+++ b/src/components/ItemAccordion/ItemAccordion.css
@@ -80,7 +80,7 @@
 .selected-product-details{
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
 }
 
 .edit-button{
