--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,7 @@
 
 :root{
   /* Colors */
-  --color-primary: #6e2637;
+  --color-primary: #6E2637;
   --color-primary-light: #e3e2e2;
   --color-secondary: #696868;
   --color-black: #000;
@@ -41,10 +41,21 @@
 .flex {
 display: flex;
 }
+.charmbuilder-title{
+  font-family: var(--text-primary);
+  font-size: 34px;
+  color: var(--color-primary);
+  padding: 10px;
+  font-weight: bolder;
+  margin-bottom: .5rem;
+}
 
-.charmproduct-details{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  width: 100%;
-  padding-top: 2px;
+@media screen and (max-width: 440px) {
+  .charm-details{
+    flex-direction: column;
+    justify-content: center;
+  }
+  .items_charm-container{
+    border-right: none !important;
+  }
 }
