changes for oni us done

--- a/src/app.css
+++ b/src/app.css
@@ -26,10 +26,13 @@
   /* Border */
   --border-radius: 15px;
 }
-.app{
+.app {
   max-width: 531px;
   margin: 10px auto;
   width: 100%;
+  background: #f5f5f5;
+  border-radius: 5px;
+  padding: 22px;
 }
 
 .grid{
@@ -49,7 +52,12 @@ display: flex;
   font-weight: bolder;
   margin-bottom: .5rem;
 }
-
+.br-1{
+  border-radius: 8px;
+}
+.br-2{
+  border-radius: 25px;
+}
 @media screen and (max-width: 440px) {
   .charm-details{
     flex-direction: column;
