@feat: Customized UI for Memara

--- a/src/app.css
+++ b/src/app.css
@@ -9,10 +9,11 @@
 
 :root{
   /* Colors */
-  --color-primary: #6E2637;
+  --color-primary: #878787;
   --color-primary-light: #e3e2e2;
   --color-secondary: #696868;
   --color-black: #000;
+  --green: #7FA295;
 
   /* Typography */
   --text-primary: 'Poppins', sans-serif;
@@ -30,9 +31,10 @@
   max-width: 531px;
   margin: 10px auto;
   width: 100%;
-  background: #f5f5f5;
+  background: #fff;
   border-radius: 5px;
   padding: 22px;
+  border: 1px solid #ddd;
 }
 
 .grid{
@@ -45,9 +47,9 @@
 display: flex;
 }
 .charmbuilder-title{
-  font-family: var(--text-primary);
-  font-size: 34px;
-  color: var(--color-primary);
+  font-family: inherit;
+  font-size: 2rem;
+  color: #878787;
   padding: 10px;
   font-weight: bolder;
   margin-bottom: .5rem;
@@ -58,6 +60,11 @@ display: flex;
 .br-2{
   border-radius: 25px;
 }
+@media screen and (max-width: 768px){
+  .charmbuilder-title{
+    font-size: 1.8rem;
+  }
+}
 @media screen and (max-width: 440px) {
   .charm-details{
     flex-direction: column;
@@ -65,5 +72,8 @@ display: flex;
   }
   .items_charm-container{
     border-right: none !important;
+  }
+  .charmbuilder-title{
+    font-size: 1.5rem;
   }
 }
