add styles as per memara theme

--- a/src/components/RecommProduct/RecommProduct.css
+++ b/src/components/RecommProduct/RecommProduct.css
@@ -51,6 +51,7 @@ input[type="checkbox"]{
     left: 10px;
     color: var(--green);
     background: rgba(255, 255, 255, 0.726);
+    border: 2px solid lightgray;
     border-radius: 50%;
     width: 20px;
     height: 20px;
