--- a/src/app.css
+++ b/src/app.css
@@ -1,21 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-
-:root{
+:root {
   /* Colors */
-  --color-primary: #6E2637;
+  --color-primary: #6e2637;
   --color-primary-light: #e3e2e2;
   --color-secondary: #696868;
   --color-black: #000;
 
   /* Typography */
-  --text-primary: 'Poppins', sans-serif;
+  --text-primary: "Poppins", sans-serif;
   --text-small: 12px;
   --text-medium: 14px;
   --text-large: 16px;
@@ -27,9 +26,9 @@
   --border-radius: 15px;
 }
 .app {
-  max-width: 531px;
+  max-width: 1440px;
   margin: 10px auto;
-  width: 100%;
+  width: 90.5%;
   background: #f5f5f5;
   border-radius: 5px;
   padding: 22px;
@@ -37,35 +36,36 @@
   position: relative;
 }
 
-.grid{
+.grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-   grid-gap: 10px;
+  grid-gap: 10px;
 }
 
 .flex {
-display: flex;
+  display: flex;
 }
-.charmbuilder-title{
+.charmbuilder-title {
   font-family: var(--text-primary);
   font-size: 34px;
   color: var(--color-primary);
   padding: 10px;
   font-weight: bolder;
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
+  text-align: center;
 }
-.br-1{
+.br-1 {
   border-radius: 8px;
 }
-.br-2{
+.br-2 {
   border-radius: 25px;
 }
 @media screen and (max-width: 440px) {
-  .charm-details{
+  .charm-details {
     flex-direction: column;
     justify-content: center;
   }
-  .items_charm-container{
+  .items_charm-container {
     border-right: none !important;
   }
 }
