--- a/src/components/ItemAccordion/ItemAccordion.css
+++ b/src/components/ItemAccordion/ItemAccordion.css
@@ -32,8 +32,8 @@
 .acc-body{
     width: 100%;
     border-radius: 20px;
-    margin-top: 10px;
     padding: 20px;
+    padding-top: 0px;
     max-height: 3000px;
     height: auto;
     transition: all 0.5s ease;
@@ -42,9 +42,10 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    gap: 1rem;
+    gap: 2rem;
     overflow-x: auto;
     padding: 15px 0px;
+    padding-top: 0px;
 }
 .recomm-products-wrapper::-webkit-scrollbar{
     height: 5px;
