--- a/src/app.css
+++ b/src/app.css
@@ -8,13 +8,13 @@
 
 :root {
   /* Colors */
-  --color-primary: #6e2637;
+  --color-primary: #000;
   --color-primary-light: #e3e2e2;
   --color-secondary: #696868;
   --color-black: #000;
 
   /* Typography */
-  --text-primary: "Poppins", sans-serif;
+  --text-primary: inherit;
   --text-small: 12px;
   --text-medium: 14px;
   --text-large: 16px;
@@ -26,33 +26,40 @@
   --border-radius: 15px;
 }
 .app {
-  max-width: 1440px;
-  margin: 10px auto;
-  width: 90.5%;
-  background: #f5f5f5;
+  max-width: 350px;
+  margin-left: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 0px;
+  width: 100%;
+  /* background: #f5f5f5; */
   border-radius: 5px;
   padding: 22px;
   overflow: hidden;
   position: relative;
+  border: 1px solid var(--color-primary-light);
 }
-
+/* 
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
-}
+} */
 
 .flex {
   display: flex;
 }
 .charmbuilder-title {
   font-family: var(--text-primary);
-  font-size: 34px;
+  font-size: 20px;
+  font-style: inherit;
+  letter-spacing: 0.06rem;
   color: var(--color-primary);
   padding: 10px;
   font-weight: bolder;
   margin-bottom: 0.5rem;
   text-align: center;
+  text-transform: uppercase;
 }
 .br-1 {
   border-radius: 8px;
@@ -67,5 +74,8 @@
   }
   .items_charm-container {
     border-right: none !important;
+  }
+  .app{
+    margin: 10px auto;
   }
 }
