--- a/src/app.css
+++ b/src/app.css
@@ -34,10 +34,10 @@
   width: 100%;
   /* background: #f5f5f5; */
   border-radius: 5px;
-  padding: 22px;
+  /* padding: 22px; */
   overflow: hidden;
   position: relative;
-  border: 1px solid var(--color-primary-light);
+  /* border: 1px solid var(--color-primary-light); */
 }
 /* 
 .grid {
