--- a/src/app.css
+++ b/src/app.css
@@ -25,11 +25,22 @@
   /* Border */
   --border-radius: 15px;
 }
+.app_container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #DDD4E2;
+  position: relative;
+  margin-bottom: 35px;
+}
+.item-wrapper{
+  border: 1px solid var(--color-primary);
+  border-radius: 10px;
+}
 .app {
   max-width: 1440px;
   margin: 10px auto;
-  width: 90.5%;
-  background: #f5f5f5;
+  width: 100%;
   border-radius: 5px;
   padding: 22px;
   overflow: hidden;
@@ -67,5 +78,8 @@
   }
   .items_charm-container {
     border-right: none !important;
+  }
+  .app{
+    padding: 22px 0px !important;
   }
 }
