--- a/src/components/TotalCard/TotalCard.css
+++ b/src/components/TotalCard/TotalCard.css
@@ -22,7 +22,7 @@
     gap: 10px;
     flex-wrap: wrap;
     color: var(--color-primary) !important;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 /* .total-card-price .money:first-child{
     text-decoration: line-through !important;
@@ -63,6 +63,8 @@
 
 .total-card-product-title{
     max-width: 70%;
+    font-size: 13px;
+    margin-bottom: 5px;
 }
 
 .total-card-product-price{
@@ -71,7 +73,7 @@
     justify-content: flex-end;
     color: var(--color-primary) !important;
     font-size: 14px;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 /* .total-card-product-price .money:first-child{
@@ -108,9 +110,9 @@
     
 }
 .act-btn{
-    border: 1px solid var(--color-primary);
+    border: 1px solid rgb(241, 241, 241);
     letter-spacing: 0.06rem;
 }
 .act-btn:hover{
-    box-shadow: 0px 0px 0px 1.5px black;
+    box-shadow: 0px 0px 0px 1.5px rgb(241, 241, 241);
 }
